--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/natjcr/APIrest_Practico#readme",
   "dependencies": {
+    "axios": "^1.3.6",
     "uniq": "^1.0.1"
   }
 }
